# obsidian-tc

./: .dependency-cruiser-known-violations.json  .dependency-cruiser.cjs  .gitattributes  .gitignore  .gitleaks.toml  .mcpbignore  AGENTS.md  ANALYSIS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  MERGE-PROGRESS.md  README.md  SECURITY.md  SKILLS.md  TREE.md  biome.json  justfile  manifest.json  package.json  server.json  tsconfig.base.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-repo/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci-docgen.yml  ci-docker.yml  ci-docs.yml  ci-install-smoke.yml  ci-model-service.yml  ci-native.yml  ci-plugin.yml  ci-prose-suggest.yml  ci-security.yml  ci-server.yml  ci-version.yml  ci-wiki.yml  dco.yml  publish.yml  release-image.yml  release-lag.yml
docs/: .gitignore  COHERENCE.md  CUTOVER.md  G2.1-tools.md  G2.2-architecture.md  G2.3-storage.md  G2.4-observability.md  G2.4-security.md  G2.5-release-engineering.md  PORTABILITY.md  QUICKSTART.md  README.md  RELEASE-SIGNING.md  RELEASE.md  RELEASING.md  SYNC.md  WHY.md  astro.config.mjs  followups.md  package.json  project-facts.json
docs/adr/: 0001-embedded-sqlite-substrate.md  0002-one-cache-db-with-logical-vault-isolation.md  0003-losing-mechanisms-ship-dark.md  0004-experiential-tier-is-a-membrane.md  0005-the-isnad-boundary.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/plans/: 2026-06-25-headless-vaultbackend-adr.md  2026-07-12-rust-python-workload-partition.md  2026-07-13-graph-densification.md  2026-07-14-densification-measurement.md  2026-07-14-tag-edges-preregistration.md  audit-remediation.md
docs/plans/data/2026-07-14-densification/: README.md  bench-serve.json  bench-walk.json  ctl.json  knn.json  knn80-strict.json  knn80.json  power-sim.ts  tag.json  trt.json
docs/public/: CNAME
docs/src/content/docs/: index.md  roadmap.md
docs/src/content/docs/configuration/: config-reference.md  config-yaml.md  embedding-model-migration.md  inference-gateway.md
docs/src/content/docs/contributing/: index.md
docs/src/content/docs/deployment/: index.md
docs/src/content/docs/getting-started/: compatibility.md  concepts.md  first-run.md  install.md
docs/src/styles/: custom.css
docs/superpowers/plans/: 2026-07-07-ambient-context-linux-phase3.md  2026-07-07-ambient-context-macos-phase1.md  2026-07-07-ambient-context-windows-phase2.md  2026-07-20-the-459-perf-harness.md  2026-07-24-the-563-564-derived-plane-isolation.md
docs/superpowers/specs/: 2026-07-07-ambient-context-design.md  2026-07-20-the-459-perf-harness-design.md  2026-07-24-the-563-564-derived-plane-isolation-design.md
docs/wiki/: Architecture.md  Configuration-Reference.md  Configuration.md  Contributing.md  Deployment-Modes.md  FAQ.md  Home.md  Installation-Guide.md  Installation.md  Observability.md  Plugin-Bridges.md  Security-and-ACL.md  Tool-Reference.md  _Footer.md  _Sidebar.md
examples/: config.hardened.json
scripts/: bundle-mcpb.ts  check-boundaries.mjs  check-config-threading.mjs  check-nul-bytes.mjs  check-release-lag.mjs  check-vault-leak.mjs  check-version-coherence.mjs  check-workflow-injection.mjs  pin-workspace-deps.mjs  release.mjs  write-smoke-config.mjs
services/bge-m3-service/: .gitignore  README.md  pyproject.toml  requirements-ci.in  requirements-ci.txt
services/bge-m3-service/obsidian_tc_bge/: __init__.py  api.py  batching.py  config.py  contracts.py  health.py  model.py  reranker.py
services/bge-m3-service/scripts/: modal_smoke.py
services/bge-m3-service/tests/: test_api.py  test_batching.py  test_config.py  test_contracts.py  test_health.py
services/docs-ingest/: .gitignore  README.md  pyproject.toml
services/docs-ingest/obsidian_tc_docs_ingest/: __init__.py  contracts.py  pipeline.py  router.py  writer.py
services/docs-ingest/tests/: test_router.py  test_writer.py
services/model-service/: .gitignore  main.py  pyproject.toml
services/qwen-tei/: run.sh
(+10 files in other folders)
