[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-tc-bge-m3-service"
version = "0.1.0"
description = "BGE-M3 multi-vector (dense/sparse/ColBERT) model service behind the obsidian-tc ModelClient seam"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "FlagEmbedding>=1.3.2",
    "torch>=2.2",
    "huggingface-hub>=0.24",
    "sentence-transformers>=3.3",
    "numpy>=1.26",
]

[tool.hatch.build.targets.wheel]
packages = ["obsidian_tc_bge"]

[tool.ruff]
line-length = 100

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
