[project]
name = "obsidian-tc-model-service"
version = "0.1.0"
description = "Local GPU model service (embeddings + reranker) behind the obsidian-tc gateway boundary. NOT in the Bun workspace; the server runs without it."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "numpy>=1.26,<2.2",
  "torch>=2.5",
  "transformers>=4.46",
  "FlagEmbedding>=1.3.4",
  "sentence-transformers>=3.3",
]

# GPU torch (CUDA 12.4 wheels) for the RTX 3080. If the CUDA build fails to resolve on this
# host, drop the [tool.uv.sources] torch line to fall back to the default wheel.
[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
package = false
